<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/help"/>
    <item
        android:id="@+id/action_youtube"
        android:icon="@drawable/youtube"
        android:showAsAction="always"
        android:title="@string/youtube_menu"/>
    <item
        android:id="@+id/action_twitter"
        android:icon="@drawable/menu_icon_twitter"
        android:showAsAction="never"
        android:title="Twitter"/>
    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/menu_icon_facebook"
        android:showAsAction="never"
        android:title="Facebook"/>
    <item
        android:id="@+id/action_rss"
        android:icon="@drawable/menu_icon_rss"
        android:showAsAction="never"
        android:title="RSS"/>
    <item
        android:id="@+id/action_plus"
        android:icon="@drawable/menu_icon_gplus"
        android:showAsAction="never"
        android:title="G+"/>
    <item
        android:id="@+id/action_mail"
        android:icon="@drawable/menu_icon_mail"
        android:showAsAction="never"
        android:title="E-mail"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/about_menu"/>    
    <item
        android:id="@+id/action_share"
        android:showAsAction="never"
        android:actionProviderClass= "android.widget.ShareActionProvider"
        android:title="@string/share"/>    
</menu>

<!--  android:actionProviderClass= "android.widget.ShareActionProvider"
android:actionProviderClass="android.support.v7.widget.ShareActionProvider"
 -->